[package]
name = "tcpjunk"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
ux = "0.1.3"
lazy_static = "1.4.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
actix-web = "1.0.8"